feat: implementa sistema de autenticação completo com JWT/Cookie
Backend:
- AuthController com login, logout e /auth/me
- JWT via HttpOnly cookie (SameSite=Lax)
- JwtAuthenticationFilter com validação por cookie + header
- LoginRateLimiter (5 tentativas, bloqueio 15min)
- OperatorDetailsService (Spring Security UserDetailsService)
- SecurityConfig com CORS, CSRF disabled, stateless sessions
- Entidade Operator com campo role (ADMIN/OPERATOR)
- OperatorRole enum
- DataLoader com seed de operadores com senha BCrypt
- Migração H2: corrigido schema role + banco file-based dev

Frontend:
- AuthContext com login/logout/checkSession
- Login.jsx com UI premium, rate-limit feedback, show/hide password
- RequireAuth (AuthGuard) protegendo rotas autenticadas
- credentials: include em todos os fetch (AppContext, Team)
- Animação spin para loading states